--- a/lib/lama/src/Makefile
+++ b/lib/lama/src/Makefile
@@ -4,7 +4,8 @@
 
 include ../vsn.mk
 include ../../../support/include.mk
-ERLC_FLAGS += -I../include
+ERLC_FLAGS  += -I../include
+ERL_OBJECTS += $(EBIN_DIR)/lama.app
 
 all: $(ERL_OBJECTS)
 
