--- a/lib/fd_server/config/configure.in
+++ b/lib/fd_server/config/configure.in
@@ -68,6 +68,12 @@ AC_CHECK_FUNC(connect, ,
             AC_MSG_ERROR(Function 'socket' not found.), $NSL_LIBS)])
 AC_SUBST(SOCKET_LIBS)
 
+AC_CHECK_FUNC(getaddrinfo,
+	[AC_DEFINE(HAVE_GETADDRINFO, 1,
+		[Define to 1 if you have the 'getaddrinfo' function.])],
+	[AC_CHECK_LIB(socket, getaddrinfo,
+		[AC_DEFINE(HAVE_GETADDRINFO, 1, [Define to 1 if you have the 'getaddrinfo' function.])])])
+
 dnl
 dnl End.
 
