fix xdr parsing of enum, union
+1.1 - 120730 - beta1 - Rui Xie, Alcatel-Lucent, Inc:
+ - fix xdr parsing of enum, union
+ - add feature random encoding for XDR encoding/decoding.

--- a/lib/rpc/src/Makefile
+++ b/lib/rpc/src/Makefile
@@ -1,11 +1,21 @@
 # Copyright (c) 2000, 2001 Sendmail, Inc.  All rights reserved.
 # This Makefile may require GNU make.
 
-include ../../../support/include.mk
 include ../vsn.mk
 
-ERLC_FLAGS += -I ../..
+# Override these as necessary for your Erlang environment.
+#KERNEL_VSN=2.6.1.2.1
+#STDLIB_VSN=1.9.1.1
+#ERTS_VSN=5.0.1.1.b3
+KERNEL_VSN=2.15.1
+STDLIB_VSN=1.18.1
+ERTS_VSN=5.9.1
+EMULATOR = beam
+ERLC = erlc
+ERL = erl
+#
 
+EBIN=../ebin
 ESRC=.
 ERPCGEN = ../priv/erpcgen
 ERPCGEN_OPTS =
@@ -18,6 +28,10 @@ RPC_MODULES = rpc_client rpc_xdr rpc_server \
 
 MODULES =  $(RPC_MODULES) $(ERPCGEN_MODULES)
 
+# This is a Perl script for producing .app files from a template
+#
+APPSCRIPT = '$$vsn=shift; $$mods=""; while(@ARGV){ $$_=shift; s/^([A-Z].*)$$/\'\''$$1\'\''/; $$mods.=", " if $$mods; $$mods .= $$_; } while(<>) { s/%VSN%/$$vsn/; s/%MODULES%/$$mods/; print; }'
+
 ERPCGEN_TARGET_FILES= $(ERPCGEN_MODULES:%=../ebin/%.$(EMULATOR))
 RPC_TARGET_FILES= $(RPC_MODULES:%=../ebin/%.$(EMULATOR))
 TARGET_FILES= $(MODULES:%=../ebin/%.$(EMULATOR)) $(ERPCGEN)
@@ -28,15 +42,31 @@ TARGET_FILES= $(MODULES:%=../ebin/%.$(EMULATOR)) $(ERPCGEN)
 %_clnt.erl: %.x $(ERPCGEN)
 	$(ERPCGEN) -a '[clnt]' $*
 
-# $(EBIN)/%.$(EMULATOR): $(ESRC)/%.erl
-# 	$(ERLC) $(ERLC_FLAGS) -o$(EBIN) $<
+$(EBIN)/%.$(EMULATOR): $(ESRC)/%.erl
+	$(ERLC) -b$(EMULATOR) $(ERL_FLAGS) $(ERL_COMPILE_FLAGS) -o$(EBIN) $<
 
-all: $(TARGET_FILES)
+all: $(TARGET_FILES) erpcgen.boot erpcgen.script ../ebin/rpc.app
 
-$(ERPCGEN): erpcgen.src $(ERPCGEN_TARGET_FILES)
+$(ERPCGEN): erpcgen.boot erpcgen.script
 	sed -e 's;%ERL%;$(ERL);' \
 	  erpcgen.src > $(ERPCGEN)
 	chmod u+x $(ERPCGEN)
+
+erpcgen.boot erpcgen.script: ../ebin/erpcgen.app erpcgen.rel $(ERPCGEN_TARGET_FILES)
+	$(ERLC) -pa ../ebin erpcgen.rel
+
+erpcgen.rel:	erpcgen.rel.src
+	sed 	-e 's;%ERTS_VSN%;$(ERTS_VSN);' \
+		-e 's;%KERNEL_VSN%;$(KERNEL_VSN);' \
+		-e 's;%STDLIB_VSN%;$(STDLIB_VSN);' \
+		-e 's;%ERPCGEN_VSN%;$(ERPCGEN_VSN);' \
+	erpcgen.rel.src > erpcgen.rel
+
+../ebin/erpcgen.app:	erpcgen.app.src
+	perl -e $(APPSCRIPT) "$(ERPCGEN_VSN)" $(ERPCGEN_MODULES) < $< > $@
+
+../ebin/rpc.app:	rpc.app.src
+	perl -e $(APPSCRIPT) "$(RPC_VSN)" $(RPC_MODULES) < $< > $@
 
 xdr_parse.erl: xdr.yrl
 	$(ERLC) -o xdr_parse.erl xdr.yrl
